colorWheel fireFlame Mods

--- a/app-src/index.html
+++ b/app-src/index.html
@@ -29,6 +29,10 @@
     <button id="twinkleRandomBtn">twinkleRandom</button>
     <button id="meteorRainBtn">meteorRain</button>
     <button id="bouncingBallsBtn">bouncingBalls</button>
+    <button id="fireFlameBtn">fireFlame</button>
+    <button id="colorWheelBtn">colorWheel</button>
+
+
     <button id="packageloss">showPackageLoss</button>
 
     <canvas id="canvas" hidden></canvas>
