--- a/app-src/index.html
+++ b/app-src/index.html
@@ -5,7 +5,7 @@
     <title>ScreenChaser</title>
     <link rel="stylesheet" href="index.css" />
     <script defer src="render.js"></script>
-    <script type="module" defer src="3dpreview.js"></script>
+    <script defer src="3dpreview.js"></script>
 
     <style>
       .leds {
