--- a/app-src/index.html
+++ b/app-src/index.html
@@ -12,7 +12,7 @@
 
   <div id="container"></div>
   <script></script>
-  <body class="content">
+  <!--   <body class="content">
     <button id="frostyPikeBtn">frostyPike</button>
     <button id="twinkleRandomBtn">twinkleRandom</button>
     <button id="meteorRainBtn">meteorRain</button>
@@ -21,5 +21,5 @@
     <button id="colorWheelBtn">colorWheel</button>
     <button id="packageloss">showPackageLoss</button>
     <canvas id="canvas" hidden></canvas>
-  </body>
+  </body> -->
 </html>
