--- a/app-src/index.html
+++ b/app-src/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="index.css" />
     <script defer src="render.js"></script>
   </head>
-  <button id="videoSelectBtn">Choose a Video Source</button>
-
-  <div id="container"></div>
   <script></script>
-  <!--   <body class="content">
-    <button id="frostyPikeBtn">frostyPike</button>
+  <body class="content">
+    <button id="videoSelectBtn">Choose a Video Source</button>
+
+    <div id="container"></div>
+    <!-- <button id="frostyPikeBtn">frostyPike</button>
     <button id="twinkleRandomBtn">twinkleRandom</button>
     <button id="meteorRainBtn">meteorRain</button>
     <button id="bouncingBallsBtn">bouncingBalls</button>
     <button id="fireFlameBtn">fireFlame</button>
     <button id="colorWheelBtn">colorWheel</button>
     <button id="packageloss">showPackageLoss</button>
-    <canvas id="canvas" hidden></canvas>
-  </body> -->
+    <canvas id="canvas" hidden></canvas> -->
+  </body>
 </html>
