prepare network test

--- a/server/cams.html
+++ b/server/cams.html
@@ -209,6 +209,10 @@
       }
       /* end of media query */
     </style>
+    <!--     <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; img-src https://*; child-src 'none';"
+    /> -->
     <script src="/socket.io.js"></script>
   </head>
 
