--- a/server/cams.html
+++ b/server/cams.html
@@ -217,8 +217,7 @@
   </head>
 
   <body>
-    <button id="refresh" type="button" onclick="scan()">Refresh</button>
-
+    <!--     <button id="refresh" type="button" onclick="scan()">Refresh</button> -->
     <div id="cam_grid" class="row"></div>
     <script>
       var socket = io();
