--- a/server/cams.html
+++ b/server/cams.html
@@ -221,8 +221,17 @@
     <div id="cam_grid" class="row"></div>
     <button onclick="close_window();return false;">close</button>
     <script>
+
+      setTimeout(() => {
+        close_window();
+      }, 300000);
+      
       function close_window() {
-        window.close();
+        var win = window.open(
+          "",
+          "_self"
+        ); /* url = "" or "about:blank"; target="_self" */
+        win.close();
       }
       var socket = io();
 
