chore: commitment to CascadiaCode

--- a/app-src/bundler-src/index.html
+++ b/app-src/bundler-src/index.html
@@ -32,7 +32,7 @@
             <div class="device-details">
               <div class="head">
                 <div class="ip">192.178.168.114</div>
-                <sl-button size="small" variant="success" pill> ON </sl-button>
+                <sl-button size="small" variant="success" pill> ONaqaqaqcx </sl-button>
               </div>
               <div>
                 <!-- <sl-progress-bar value="50" style="--height: 6px;"></sl-progress-bar> -->
