--- a/app-src/bundler-src/index.html
+++ b/app-src/bundler-src/index.html
@@ -9,9 +9,7 @@
   <body>
     <div id="app" class="app">
       <div class="app-header">
-        <div class="logo-icon">
-          <img src="/logo_full.svg" alt="ScreenChaser" />
-        </div>
+        <div class="logo-icon"></div>
 
         <div class="center"><code class="version">v0.0.1</code></div>
       </div>
@@ -32,7 +30,9 @@
             <div class="device-details">
               <div class="head">
                 <div class="ip">192.178.168.114</div>
-                <sl-button size="small" variant="success" pill> ONaqaqaqcx </sl-button>
+                <sl-button size="small" variant="success" pill>
+                  ONaqaqaqcx
+                </sl-button>
               </div>
               <div>
                 <!-- <sl-progress-bar value="50" style="--height: 6px;"></sl-progress-bar> -->
