--- a/app-src/bundler-src/chaser.html
+++ b/app-src/bundler-src/chaser.html
@@ -2,9 +2,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ChaserHack</title>
   </head>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      height: 100vh;
+      background-color: black;
+      color: white;
+      font-family: monospace;
+    }
+    canvas {
+      image-rendering: pixelated;
+      width: 100vw;
+      height: 10vh;
+    }
+  </style>
   <body>
     ChaserHack
+    <canvas></canvas>
   </body>
+  <script type="module" src="/src/chaser.ts"></script>
 </html>
